[package]
name = "esp32c3"
version = "0.1.0"
authors = ["Bjoern Quentin <bjoernQ@mobile-j.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
riscv = "0.7.0"

embedded-hal = "0.2.3"
nb = "1.0.0"
void = { version = "1.0.2", default-features = false }

esp32c3_pac = { package = "esp32c3", git = "https://github.com/jessebraham/esp32c3.git", branch = "develop" }

[dependencies.riscv-rt] 
version = "0.8.0"
git = "https://github.com/MabezDev/riscv-rt"
rev = "6b55e4aa3895924e31bcd151f2f0ab840836fa07"


[build-dependencies]
riscv-target = "0.1.2"

[package.metadata.espflash]
format = "direct-boot"
